--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
